# ml-final-assignment

./: app.py  main.py  pyproject.toml  requirements.txt
src/: train.ipynb
